# tant

./: .env.example  Cargo.toml  README.md  config.json  redaction_rules.json  test_keyboard.md  test_pty.sh  usage_ledger.json
.github_issues/: ISSUES_SUMMARY.md  issue10_git_branch.md  issue11_hostname.md  issue12_search_history.md  issue13_copy_output.md  issue14_block_export.md  issue15_performance.md  issue1_split_pane.md  issue2_close_pane.md  issue3_pinned_commands.md  issue4_tab_management.md  issue5_prompt_display.md  issue6_autocomplete.md  issue7_real_ai.md  issue8_theme_system.md  issue9_cwd_detection.md
__tests__/: export_tests.rs
doc/: AI_PANEL_TEST_PLAN.md  EXAMPLE.md  PHASE3_SUMMARY.md  SHELL_INTEGRATION_QUICKSTART.md
exports/: tant_ai_export_pane_20260207_203845.md  tant_ai_export_pane_20260207_203847.md
shell_integration/: install.sh  tant.bash  tant.fish  tant.zsh
src/: ai.rs  export.rs  main.rs  parser.rs  pty.rs  renderer.rs  themes.rs
