[package]
name = "tant"
version = "0.1.0"
edition = "2021"

[dependencies]
portable-pty = "0.8"
vt100 = "0.15"
iced = { version = "0.12", features = ["tokio", "canvas"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"
libc = "0.2"
nix = { version = "0.27", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-util = "0.7"
regex = "1.10"
